use .apt.vm as extension use ${project.version} in docs instead of old static ones
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@14729 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/site/apt/examples/example-exec-using-plugin-dependencies.apt.vm
+++ b/src/site/apt/examples/example-exec-using-plugin-dependencies.apt.vm
@@ -62,7 +62,7 @@ Using Plugin Dependencies Instead of Project Dependencies
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>1.1</version>
+        <version>${project.version}</version>
         <executions>
           <execution>
             ...
