--- a/src/site/apt/examples/example-exec-for-java-programs.apt.vm
+++ b/src/site/apt/examples/example-exec-for-java-programs.apt.vm
@@ -27,11 +27,12 @@ Running Java programs with the exec goal
 
  Special treatment of some command line arguments and configuration parameters facilitate the running of Java programs in external processes.
 
-  Note: with the java mojo, there are some confusion caused by the almost duplication of functionality between the arguments and commandArgs configuration parameters.
+  Note: With the <<<exec>>> goal, there are some confusion caused by the almost duplication of functionality between the <<<arguments>>> and
+  <<<commandlineArgs>>> configuration parameters.
 
-  *  If commandLineArgs is specified, it will be used as is, except for replacing %classpath with proper classpath using dependencies
+  *  If <<<commandlineArgs>>> is specified, it will be used as is, except for replacing %classpath with proper classpath using dependencies
 
-  * Otherwise if the property exec.args is specified, it will be used
+  * Otherwise if the property <<<exec.args>>> is specified, it will be used
 
   * Otherwise the list of <argument> and <classpath> will be parsed and used
 
