Changed some occurrences of "Exec Plugin" into "Exec Maven Plugin"
git-svn-id: file:///home/tiste/MOJOHAUS-TO-GIT/SVN-MOJO-WIP/trunk/mojo/exec-maven-plugin@17562 52ab4f32-60fc-0310-b215-8acea882cd1b

--- a/src/site/apt/examples/example-exec-for-java-programs.apt.vm
+++ b/src/site/apt/examples/example-exec-for-java-programs.apt.vm
@@ -49,7 +49,7 @@ mvn exec:exec -Dexec.executable="java" [...] -Dexec.args="%classpath"
 
 * POM configuration
 
- To execute Java programs, the Exec Plugin helps by allowing the <<<\<classpath\>>>> special argument:
+ To execute Java programs, the Exec Maven Plugin helps by allowing the <<<\<classpath\>>>> special argument:
 
 -------------------
         <configuration>
