Added more description with examples about <environmentVariables/> configuration

--- a/src/site/apt/usage.apt.vm
+++ b/src/site/apt/usage.apt.vm
@@ -68,6 +68,9 @@ mvn exec:exec -Dexec.executable="maven" [-Dexec.workingdir="/tmp"] -Dexec.args="
             <argument>myproject:dist</argument>
             ...
           </arguments>
+          <environmentVariables>
+            <LANG>en_US</LANG>
+          </environmentVariables>
         </configuration>
       </plugin>
     </plugins>
