Cleanup project site
- fix broken links
- add breadcrumbs for site
- remove faq - there is no useful content

--- a/src/site/apt/examples/example-exec-or-java-change-classpath-scope.apt.vm
+++ b/src/site/apt/examples/example-exec-or-java-change-classpath-scope.apt.vm
@@ -40,5 +40,5 @@ Changing the classpath scope when running Java programs
   or, on the command line,
 
 -----
-mvn exec:exec [...] -Dexec.classpathScope="java"
+mvn exec:java [...] -Dexec.classpathScope="test"
 -----
