--- a/src/site/apt/examples/example-java-project-properties.apt.vm
+++ b/src/site/apt/examples/example-java-project-properties.apt.vm
@@ -23,14 +23,15 @@
  ~~ NOTE: For help with the syntax of this file, see:
  ~~ http://maven.apache.org/doxia/references/apt-format.html
 
+Forward maven properties to exec:java goal
 
-You can ensure the maven properties are available to your main forcing `<projectProperties />` property type.
+  You can ensure the maven properties are available to your main forcing <<<\<projectProperties /\>>>> property type.
 
-  Tip: you can still override potentially conflicting properties if you set them *after*.
+  Tip: you can still override potentially conflicting properties if you set them <<after>>.
 
 * pom.xml
 
--------------------
++-------------------+
 <project>
   ...
   <build>
@@ -67,5 +68,4 @@ You can ensure the maven properties are available to your main forcing `<project
   </build>
    ...
 </project>
--------------------
-
++-------------------+
